// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 fgYPVA"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 eQiLzD"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 fJaFMU"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a primary color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 fgYPVA"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 dNaWbc"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 cXaVYb"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 eEXvUi"
    color="warning"
  />
</div>
`;
